--- a/_config.yml
+++ b/_config.yml
@@ -20,14 +20,10 @@ markdown: kramdown                       # Markdown 解析器
 highlighter: rouge                       # 代码高亮器
 permalink: /:categories/:year/:month/:day/:title/  # 文章URL格式
 
-# 分页设置
-pagination:
-  enabled: true                    # 首页每页显示文章数
-  per_page: 5
-  permalink: '/page/:num/'         # 首页分页URL格式
-  sort_field: 'date'
-  sort_reverse: true
-  
+# 分页设置 
+  paginate: 5                 # 首页每页显示文章数
+paginate_path: "/page:num/"   # 首页分页URL格式
+
 # 外部CSS
 # external_css:
 #  - "https://hbw.me/blog/assets/css/style.css"
